<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">babicki-assignment1</string>
    <string name="counters_label">Counters</string>
    <string name="select_counter_label">Specific Counter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_hint">Enter counter name</string>
    <string name="add_counter_button">Add</string>
    <string name="count_button_message">Tap the screen to increment the count</string>
    <string name="home">Home</string>
    <string name="remove_counter">Delete</string>
    <string name="reset_counter">Reset</string>
    <string name="rename_counter">Rename</string>
    <string name="rename_counter_button">Rename</string>
    <string name="rename_counter_label">Rename</string>
    <string name="rename_counter_hint">Type new name here</string>
    <string name="counter_stats">Statistics</string>
    <string name="total_stats">Total Statistics</string>
    <string name="title_activity_rename_counter">RenameCounterActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>

</resources>
