<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/home"/>
    
    <item
        android:id="@+id/remove_counter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/remove_counter"/>
    
    <item
        android:id="@+id/reset_counter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/reset_counter"/>
    
    <item
        android:id="@+id/rename_counter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/rename_counter"/>
    
    <item
        android:id="@+id/counter_stats"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/counter_stats"/>
     
     <item
        android:id="@+id/total_stats"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/total_stats"/>

</menu>
