<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RenameCounterActivity" >

    <TextView
        android:id="@+id/rename_counter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/rename_counter_label"
        android:textSize="20sp" />

    <Button
        android:id="@+id/rename_counter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:onClick="rename"
        android:text="@string/rename_counter_button" />

    <EditText
        android:id="@+id/rename_counter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rename_counter_button"
        android:layout_alignBottom="@+id/rename_counter_button"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/rename_counter_hint" />

</RelativeLayout>
